--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Letter Generator</title>
     <style>
+      * {
+        overflow: hidden;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+      }
       body {
         background-color: rgba(0, 0, 0, 0.9);
         margin: 0;
@@ -13,8 +18,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: Arial, Helvetica, sans-serif;
-        color: white;
       }
       #content {
         width: 60vw;
@@ -58,7 +61,7 @@
         width: 60vw;
         border-radius: 3vw;
         border: 3px solid white;
-        background-color: blue;
+        background-color: rgba(0, 0, 255, 0.7);
         font-size: 2.5vw;
         font-weight: 900;
         color: white;
@@ -109,7 +112,7 @@
 
       function letter() {
         cover.style.animation = "none";
-        cover.offsetHeight; 
+        cover.offsetHeight;
         cover.style.animation = "uncover 2s ease-out 1";
 
         let randomInt = Math.floor(Math.random() * 26);
@@ -119,3 +122,4 @@
     </script>
   </body>
 </html>
+
